Add Atomic Boolean Test Cases