@@ -38,6 +38,17 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version> <configuration>
+                <compilerArgs>
+                    <arg>--add-exports</arg>
+                    <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                </compilerArgs>
+            </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.5</version>
                 <configuration>
@@ -46,17 +57,18 @@
                     </argLine>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
-                <version>1.23.0</version> <dependencies>
-                <dependency>
-                    <groupId>org.pitest</groupId>
-                    <artifactId>pitest-junit5-plugin</artifactId>
-                    <version>1.2.3</version>
-                </dependency>
-            </dependencies>
-
+                <version>1.23.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-junit5-plugin</artifactId>
+                        <version>1.2.3</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <targetClasses>
                         <param>util.concurrent.atomic.*</param>
@@ -64,10 +76,14 @@
                     <targetTests>
                         <param>util.concurrent.atomic.*</param>
                     </targetTests>
-
                     <outputFormats>
                         <outputFormat>HTML</outputFormat>
                     </outputFormats>
+
+                    <jvmArgs>
+                        <value>--add-exports</value>
+                        <value>java.base/jdk.internal.misc=ALL-UNNAMED</value>
+                    </jvmArgs>
                 </configuration>
             </plugin>
         </plugins>
